--- a/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
@@ -58,22 +58,21 @@
         android:layout_height="50dp"
         android:background="@drawable/bt_color02_rounded"
         android:fontFamily="@font/bmjua"
-        android:text="로그인"
+        android:text="회원가입"
         android:textStyle="bold"
         android:textColor="#000000" />
 
     <TextView
-        android:id="@+id/signup_text"
+        android:id="@+id/login_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/bmjua"
         android:shadowColor="#80000000"
         android:shadowDx="2"
         android:shadowDy="2"
-        android:shadowRadius="3"
         android:textStyle="bold"
-        android:text="계정이 없으신가요?"
+        android:shadowRadius="3"
+        android:text="로그인 하러가기"
         android:textColor="#FFFFFF"
         android:textSize="19sp" />
-
 </LinearLayout>
