--- a/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_signup.xml
@@ -28,7 +28,7 @@
     <!-- 아이디 입력 -->
     <EditText
         android:background="@drawable/bt_color02_rounded"
-        android:id="@+id/editTextId"
+        android:id="@+id/SignupTextId"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:fontFamily="@font/bmjua"
@@ -40,7 +40,7 @@
 
     <!-- 비밀번호 입력 -->
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/SignupPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:fontFamily="@font/bmjua"
@@ -51,9 +51,9 @@
 
     <View android:layout_height="24dp" android:layout_width="match_parent"/>
 
-    <!-- 로그인 버튼 -->
+    <!-- 회원가입 버튼 -->
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnSignup"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/bt_color02_rounded"
@@ -72,6 +72,7 @@
         android:shadowDy="2"
         android:textStyle="bold"
         android:shadowRadius="3"
+        android:clickable="true"
         android:text="로그인 하러가기"
         android:textColor="#FFFFFF"
         android:textSize="19sp" />
