feat : Plant image chage logic
- 파이어베이스 경험치데이터 받아오기
(파이어베이스의 now level, next level 필드 안 받아오므로 삭제 가능)
- 경험치에 따른 이미지 렌더링 로직
- 화분 이미지 고정

--- a/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_plant_care.xml
@@ -116,21 +116,35 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- 식물 화분 이미지 -->
 
     <!-- 하단 푸터 - 배경 -->
 
+    <!-- 🪴 고정된 화분 (항상 보임) -->
+    <ImageView
+        android:id="@+id/ivPot"
+
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/cody_pot01"
+        android:contentDescription="화분"
+        app:layout_constraintBottom_toTopOf="@+id/footerBackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    />
+
+    <!-- 🌿 경험치 기반 식물 (처음엔 GONE) -->
     <ImageView
         android:id="@+id/ivPlant"
         android:layout_width="150dp"
         android:layout_height="200dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="75dp"
+        android:visibility="gone"
         android:contentDescription="식물"
-        android:src="@drawable/plant_pot"
         app:layout_constraintBottom_toTopOf="@+id/footerBackground"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        />
 
     <!-- ✅ 버튼 영역만 위에 몰아서 -->
     <View
