--- a/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
+++ b/ChatApp_1to1/app/src/main/res/layout/activity_start.xml
@@ -1,75 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!-- 상단 흰 배경 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="#FFFFFF" />
 
     <!-- 본문: 녹색 배경 + 콘텐츠 중앙 정렬 -->
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="59dp"
+        android:background="#7F6C5E" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical"
+        android:background="@drawable/bg_start_page"
         android:gravity="center"
-        android:background="@drawable/bg_color01">
+        android:orientation="vertical">
 
         <!-- 앱 이름 -->
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="앱 이름"
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:gravity="center" />
 
         <!-- 식물 이미지 -->
-        <ImageView
-            android:id="@+id/plantImage"
-            android:layout_width="327dp"
-            android:layout_height="211dp"
-            android:layout_gravity="center"
-
-            android:layout_marginBottom="40dp"
-            android:contentDescription="식물 이미지" />
 
         <!-- 시작하기 버튼 -->
-        <Button
-            android:id="@+id/startButton"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:text="시작하기"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp"
-            android:backgroundTint="#228B22"
-            android:layout_marginBottom="40dp"
-            android:layout_gravity="center" />
 
-        <!-- 게임설명 -->
-        <TextView
-            android:id="@+id/howToPlay"
+        <ImageView
+            android:id="@+id/plantImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="게임설명"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_start_logo"
+            android:contentDescription="식물 이미지" />
+
+        <Button
+            android:id="@+id/startButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+
+            android:background="@drawable/bt_brown_ui"
+            android:fontFamily="@font/bmjua"
+            android:text="시작하기"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:gravity="center" />
+            android:textSize="25sp"></Button>
+
+        <!-- 다른버튼 -->
+        <Button
+            android:id="@+id/startButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+
+            android:background="@drawable/bt_brown_ui"
+            android:fontFamily="@font/bmjua"
+            android:text="공식 웹사이트"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"></Button>
+
+        <Button
+            android:id="@+id/startButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="70dp"
+            android:background="@drawable/bt_brown_ui"
+            android:fontFamily="@font/bmjua"
+            android:text="기능준비중"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"></Button>
+
+
     </LinearLayout>
 
-    <!-- 하단 흰 배경 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="#FFFFFF" />
 </LinearLayout>
